# wasm_components_ex

./: .gitignore  .tool-versions  README.md  mix.exs  todo-list.wit.json
lib/: store.ex  store_limits.ex  wasi_options.ex  wasm_components_ex.ex
test/: wasm_components_ex_test.exs
test/support/form_handler/: Cargo.toml  form-handler.d.ts  form-handler.js  form-handler.wit  form_handler.ex  native.ex
test/support/form_handler/src/: lib.rs
test/support/live_state/: Cargo.toml  live-state.js  live-state.wit  live_state.ex  native.ex
test/support/live_state/src/: lib.rs
test/support/todo_list/: Cargo.toml  native.ex  todo_list.ex
test/support/todo_list/src/: lib.rs
wasm-components-ex/: Cargo.toml
wasm-components-ex/.cargo/: config.toml
wasm-components-ex/src/: atoms.rs  codegen.rs  component.rs  engine.rs  lib.rs  linker.rs  main.rs  store.rs
