[package]
name = "live_state"
version = "0.0.1"
authors = ["Chris Nelson"]
keywords = ["elixir", "extension", "webassembly", "wasmtime"]
categories = ["wasm"]
edition = "2021"

[lib]
name = "live_state"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
rustler = "0.34.0"
wasm_components_ex = {path = "../../../wasm-components-ex"}
once_cell = "1.19.0"
rand = "0.8.5"
wasmtime = "25.0.0"
wasmtime-wasi = "25.0.0"
wasmtime-wasi-http = "25.0.0"
wasi-common = "25.0.0"
wiggle = "25.0.0"
wat = "1.217.0"
paste = "1.0.15"
